force-app/main/default/objects/geopointe__Temp__c/geopointe__Temp__c.object-meta.xml
<CustomObject>
    <description>Used by Geopointe as &quot;temp space&quot; for the application.  Geopointe will periodically kick off a background process to clear data from this object.</description>
    <label>Geopointe Temp</label>
    <nameField>
        <displayFormat>TMP-{00000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>