force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Boolean_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Boolean_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean 1</label>
    <type>Checkbox</type>
</CustomField>