force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Boolean_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Boolean_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boolean 3</label>
    <type>Checkbox</type>
</CustomField>