force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Currency_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Currency_1__c</fullName>
    <label>Currency 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>