force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Currency_2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Currency_2__c</fullName>
    <label>Currency 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>