force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Date_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date_1__c</fullName>
    <label>Date 1</label>
    <type>Date</type>
</CustomField>