force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Date_2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date_2__c</fullName>
    <label>Date 2</label>
    <type>Date</type>
</CustomField>