force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Date_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Date_3__c</fullName>
    <label>Date 3</label>
    <type>Date</type>
</CustomField>