force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__DateTime_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__DateTime_1__c</fullName>
    <label>DateTime 1</label>
    <type>DateTime</type>
</CustomField>