force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__DateTime_2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__DateTime_2__c</fullName>
    <label>DateTime 2</label>
    <type>DateTime</type>
</CustomField>