force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__DateTime_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__DateTime_3__c</fullName>
    <label>DateTime 3</label>
    <type>DateTime</type>
</CustomField>