force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Integer_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Integer_3__c</fullName>
    <label>Integer 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>