force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Long_Text_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Long_Text_3__c</fullName>
    <label>Long Text 3</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>