force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Multi_Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Multi_Picklist_1__c</fullName>
    <label>Multi Picklist 1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>