force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Number_12_6_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Number_12_6_3__c</fullName>
    <label>Number (12,6) 3</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>