force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Picklist_1__c</fullName>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>