force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Text_2__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Text_2__c</fullName>
    <label>Text 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>