force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Text_3__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Text_3__c</fullName>
    <label>Text 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>