force-app/main/default/objects/geopointe__Temp__c/fields/geopointe__Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API Assign Records</fullName>
            </value>
            <value>
                <fullName>Add To Campaign</fullName>
            </value>
            <value>
                <fullName>Geocode Cleanup</fullName>
            </value>
            <value>
                <fullName>Print Route</fullName>
            </value>
            <value>
                <fullName>SK Data Set Push</fullName>
            </value>
            <value>
                <fullName>SK Session Id</fullName>
            </value>
            <value>
                <fullName>Dataset Extension</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>