force-app/main/default/objects/geopointe__Temp__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Temp Records</label>
</ListView>